Paths to a fixed width ... hide some paths that make it too long; Infinity slider to the top;

--- a/Flask/app/static/css/menu/menu.css
+++ b/Flask/app/static/css/menu/menu.css
@@ -84,6 +84,26 @@
     background-color: var(--bg-primary);
 }
 
+.info-path{
+    width: 50%;
+    max-width: 50%;
+    white-space: nowrap;
+}
+
+.info-path-text
+{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.info-path-text > * {
+    display: inline-block;
+    vertical-align: middle;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 25%;
+}
+
 .path-link
 {
     font-weight: bold;
